# AI-Course-HW2

./: README.md  benchmark.py  benchmark_cpu_20260330_143343.csv  benchmark_cuda_20260330_144020.csv  benchmark_cuda_20260330_145232.csv  benchmark_tensorrt_fp16_20260330_144302.csv  camera.py  compare_power_modes.py  detector.py  download_coco_subset.py  live_detection.py  metrics.py  metrics_20260330_150821.csv  mjpeg_server.py  motion_gated_cuda_20260330_161051.csv  motion_gated_cuda_20260330_174330.csv  motion_gated_cuda_20260330_174622.csv  motion_gated_cuda_20260330_174906.csv  motion_gated_detector.py  per_class_ap_20260330_150821.csv  pyproject.toml  verify_setup.py  visualize_benchmark.py  visualize_metrics.py
coco_subset/: subset_annotations.json
csv_result/: benchmark_20260325_203152.csv  benchmark_20260326_143737.csv  benchmark_20260326_145735.csv  benchmark_20260326_150259.csv  benchmark_20260326_150355.csv  benchmark_20260326_150942.csv  benchmark_20260326_151247.csv  benchmark_20260326_151420.csv  benchmark_20260326_160607.csv  benchmark_20260326_160730.csv  benchmark_20260326_160845.csv  benchmark_20260326_164526.csv  benchmark_20260326_164653.csv  benchmark_20260326_165002.csv  benchmark_cpu_20260328_011406.csv  benchmark_cpu_20260330_021233.csv  benchmark_cpu_20260330_022827.csv  benchmark_cpu_20260330_023421.csv  benchmark_cpu_20260330_135803.csv  benchmark_cuda_20260328_011451.csv  benchmark_cuda_20260330_021543.csv  benchmark_cuda_20260330_022354.csv  benchmark_cuda_20260330_022539.csv  benchmark_cuda_20260330_023506.csv  (+4 more)
(+1 files in other folders)
