[project]
name = "hw2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tsai", email = "henry1.tsai@gmail.com"},
]
dependencies = ["numpy<2", "matplotlib>=3.10.8", "pandas>=2.3.3", "psutil>=7.2.2", "jetson-stats>=4.3.2", "rich>=14.3.3"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
